--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<input id="btn" type="submit" value="Submit button">
+	    <button type="submit" id="btn">Submit button</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
